--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 }
 
 body {
+    background-color: #f0f4f8;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
     color: #333;
